Don't have fixed width labels when window width is too small.

--- a/src/renderer/styles/input-alignment.css
+++ b/src/renderer/styles/input-alignment.css
@@ -53,6 +53,7 @@
   .start-label {
     text-align: left;
     padding-right: 5px;
+    width: fit-content;
   }
 
   .start-label-contents {
